--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,12 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <style name="AppTheme" parent ="Theme.AppCompat.Light.DarkActionBar">
+
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
 
     </style>
+    <style name="AppTheme.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
 
+    <style name="RoundedButton">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">50%</item>
+    </style>
 
 
     <style name="SignChoosing">
@@ -22,6 +31,22 @@
         <item name="fontFamily">DOSIS</item>
         <item name="android:textStyle">bold</item>
     </style>
+
+    <style name="ToolBarTitle">
+        <item name="android:textSize">20dp</item>
+        <item name="android:textColor">#FFFFFF</item>
+        <item name="fontFamily">DOSIS</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="ToolBarNumberTitle">
+        <item name="android:textSize">24dp</item>
+        <item name="android:textColor">#ff742e</item>
+        <item name="fontFamily">DOSIS</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+
 
     <style name="TopicTextViewButton">
         <item name= "android:textSize">36dp</item>
@@ -43,7 +68,7 @@
         <item name="android:textSize">20dp</item>
         <item name="fontFamily">DOSIS</item>
         <item name="android:textColor">@color/black</item>
-        <item name="android:textStyle">bold</item>
+
     </style>
 
     <style name="WordActivityHeader">
@@ -65,7 +90,15 @@
         <item name="android:textSize">36dp</item>
         <item name="android:textStyle">bold</item>
         <item name="fontFamily">DOSIS</item>
-        <item name="android:paddingLeft">16dp</item>
+        <item name="android:paddingHorizontal">16dp</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
+
+    <style name="RankingName">
+        <item name="android:textSize">28dp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="fontFamily">DOSIS</item>
+        <item name="android:paddingHorizontal">16dp</item>
         <item name="android:textColor">@color/black</item>
     </style>
 
