--- a/app/src/main/res/layout/activity_exercises_list.xml
+++ b/app/src/main/res/layout/activity_exercises_list.xml
@@ -1,16 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".activities.ExercisesListActivity">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/exerciseListRV"
-        android:layout_margin="16dp"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/exerciseListActABL"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
 
-</LinearLayout>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/wordDetailLL">
+
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/exerciseListActToolBar"
+            android:layout_height="match_parent"
+            android:layout_width="match_parent"
+            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+
+
+
+            <androidx.appcompat.widget.ActionMenuView
+                android:id="@+id/exerciseListAmvMenu"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize">
+                <TextView
+                    android:id="@+id/exerciseListTitleTV"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Title"
+                    style="@style/ToolBarTitle"
+                    android:layout_gravity="center"/>
+            </androidx.appcompat.widget.ActionMenuView>
+        </androidx.appcompat.widget.Toolbar>
+
+    </com.google.android.material.appbar.AppBarLayout>
+
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/exerciseListActABL"
+        tools:context=".activities.ExercisesListActivity">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/exerciseListRV"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="16dp" />
+
+    </LinearLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
