--- a/app/src/main/res/layout/fragment_account_page.xml
+++ b/app/src/main/res/layout/fragment_account_page.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:padding="8dp">
     <LinearLayout
@@ -18,18 +18,21 @@
             android:layout_height="100dp"
             android:layout_gravity="center"
             android:background="@drawable/ic_avatar"/>
+
         <TextView
             android:id="@+id/fullNameAccountTab_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Họ và Tên"
-            android:textSize="24dp"/>
+            android:textSize="24dp" />
     </LinearLayout>
 
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:cardBackgroundColor="@color/accountFragment2"
+        android:layout_marginBottom="16dp"
         style="@style/CardViewElement">
         <LinearLayout
             android:layout_width="match_parent"
@@ -86,6 +89,8 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:backgroundTint="@color/accountFragment1"
+        android:layout_marginBottom="16dp"
         style="@style/CardViewElement">
         <LinearLayout
             android:layout_width="match_parent"
@@ -102,12 +107,14 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
                 <TextView
+
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
                     android:text="Sổ từ:"
                     style="@style/accountFragmentCardViewElementTittle"/>
 
                 <TextView
+                    android:id="@+id/noteBookCountTV"
 
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -127,7 +134,7 @@
                     android:text="Tổng điểm:" />
 
                 <TextView
-
+                    android:id="@+id/scoreCountTV"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Account"
@@ -146,7 +153,7 @@
                     style="@style/accountFragmentCardViewElementTittle"/>
 
                 <TextView
-
+                    android:id="@+id/curRankingTV"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Account"
@@ -159,8 +166,10 @@
 
     <Button
         android:id="@+id/logOutBtn"
+        android:paddingHorizontal="16dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:background="@drawable/button_background"
         android:text="Đăng xuất"/>
 </LinearLayout>
